FEAT: game endoints -> viewsets. simplify game creation
